maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:47: error: ')' expected but '}' found.
	}
        ^